Bump javaCompliance to 21+